Improve the accessibility of our jump-to functionality - Stop hiding with display: none;, this hides our jump links from modern screen readers and users with motor disabilities (ie: nowadays, pratically everyone they are intended to help). - Instead hide with an overflow that will make the links viable <tab> targets. This alone is enough to help screen reader users. - Add in a script that will show the jump-links area on-focus for motor-impared users who can still see who have js enabled (this can't be done with css unfortunately)

--- a/skins/common/commonInterface.css
+++ b/skins/common/commonInterface.css
@@ -46,7 +46,9 @@
 	display: none;
 }
 #jump-to-nav {
-	display: none;
+	/* Negate #contentSub's margin and replicate it so that the jump to links don't affect the spacing */
+	margin-top: -1.4em;
+	margin-bottom: 1.4em
 }
 #contentSub, #contentSub2 {
 	font-size: 84%;
