--- a/skins/common/commonPrint.css
+++ b/skins/common/commonPrint.css
@@ -114,6 +114,7 @@ body {
 
 .noprint,
 div#jump-to-nav,
+.mw-jump,
 div.top,
 div#column-one,
 #colophon,
